--- Auto-Git Commit ---

--- a/Linux/Cgroup/简要介绍/1. 浅谈Cgroups.md
+++ b/Linux/Cgroup/简要介绍/1. 浅谈Cgroups.md
@@ -9,6 +9,7 @@
   - [3.1. 组件之间的关系](#31-组件之间的关系)
 - [4. Cgroups 使用](#4-cgroups-使用)
   - [4.1. Create a Hierarchy](#41-create-a-hierarchy)
+    - [4.1.1. 示例](#411-示例)
   - [4.2. Unmount a Hierarchy](#42-unmount-a-hierarchy)
   - [4.3. Creating Control Groups](#43-creating-control-groups)
   - [4.4. Setting Control Cgroup Parameters](#44-setting-control-cgroup-parameters)
@@ -87,23 +88,33 @@ yum install libcgroup
 
 使用 shell 命令创建 hierarchy 并附加 subsystems 到该 hierarchy 上。 
 
-1. 为 hierarchy 创建一个 mount point。并且在 `mount point` 中包含 **cgroup 的名字**。
+1. 为 hierarchy 创建一个 mount point.
 
-```
+```bash
 mkdir /cgroup/name
 ```
 
 例如:
 
-```
+```bash
 mkdir /cgroup/cpu_and_mem
 ```
 
+在Centos中默认是`/sys/fs/cgroup`
+
 2. 接下来使用 mount 命令去**挂载 hierarchy** 并**附加**一个或多个 **subsystem** 到该 hierarchy 上。
 
+```bash
+mount -t cgroup -o subsystems XXX $MOUNT_POINT
 ```
-mount -t cgroup -o subsystems name /cgroup/name
+
+cgroup有多个subsystem，如果想要挂载所有的subsystem, 使用下面命令
+
+```bash
+mount -t cgroup XXX $MOUNT_POINT
 ```
+
+xxx可以是任意字符
 
 例如:
 
@@ -111,13 +122,24 @@ mount -t cgroup -o subsystems name /cgroup/name
 mount -t cgroup -o cpu,cpuset,memory cpu_and_mem /cgroup/cpu_and_memory
 ```
 
+在centos中XXX默认是tmpfs
+
+```
+# mount | 
+tmpfs on /sys/fs/cgroup type tmpfs (ro,nosuid,nodev,noexec,mode=755)
+
+# df |grep cgroup
+tmpfs            8046096        0   8046096   0% /sys/fs/cgroup
+```
+
+
 3. 如果想在已有的 hierarchy 上 **attch** 或 **detach subsystem**,可以使用 **remount** 操作，例如我们想 detach 掉 memory subsystem。
 
 ```
 mount -t cgroup -o remount,cpu,cpuset cpu_and_mem /cgroup/cpu_and_mem
 ```
 
-示例:
+### 4.1.1. 示例
 
 ```
 # mkdir -p /data/cg_test/mem_test
