--- a/Linux/cgroup/简要介绍/3. cgroups V2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups V2.md
@@ -1,5 +1,5 @@
 
-Cgroups 为容器实现虚拟化提供了基础。随着容器技术不断发展，`Cgroups v1` 中管理 **controller** 变得复杂起来。Cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 Cgroups v2 进行介绍。
+cgroups 为容器实现虚拟化提供了基础。随着容器技术不断发展，`cgroups v1` 中管理 **controller** 变得复杂起来。cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍。
 
 # 1. 背景
 
@@ -9,25 +9,27 @@ Cgroups 为容器实现虚拟化提供了基础。随着容器技术不断发展
 
 这种多 hierarchy 除了增加代码的复杂度和理解困难外，并没有太大的用处。一方面，跟踪**进程所有 controller** 变得**复杂**；另外，**各个 controller** 之间也**很难协同工作**（因为 **controller** 可能**属于不同的 hierarchy**, 所以从 3.16 开始，内核开始转向**单一层次**（`unified hierarchy`)。并且实现了**对 buffer io 的限制**。
 
-# 2. Cgroups v2 的变化
+# 2. cgroups v2 的变化
 
-由于 Cgroups v1 存在的种种问题，Cgroups v2 将`多 hierarchy` 的方式变成了 `unified hierarchy`，并将`所有的 controller` 挂载到`一个 unified hierarchy`。
+由于 cgroups v1 存在的种种问题，cgroups v2 将`多 hierarchy` 的方式变成了 `unified hierarchy`，并将`所有的 controller` 挂载到`一个 unified hierarchy`。
 
-当前 kernel 没有移除 Cgroups v1 版本，允许 Cgroups v1 和 v2 两个版本共存。但是相同的 controller 不能同时 mount 到这两个不同的 Cgroup 版本中。
+当前 kernel 没有移除 cgroups v1 版本，允许 cgroups v1 和 v2 两个版本共存。但是相同的 controller 不能同时 mount 到这两个不同的 cgroup 版本中。
 
-以下是 Cgroups v2 的五点改进：
+以下是 cgroups v2 的五点改进：
 
-* Cgroups v2 中`所有的controller`都会被挂载到`一个unified hierarchy`下，不再存在像`v1`中允许**不同的controller**挂载到**不同的hierarchy**的情况
-* **Proess**只能绑定到cgroup的**根(“/“)目录**和cgroup目录树中的**叶子节点**
+* cgroups v2 中`所有的controller`都会被默认自动挂载到`一个unified hierarchy`下，不再存在像`v1`中允许**不同的controller**挂载到**不同的hierarchy**的情况
+* **进程**只能绑定到cgroup的**根(“/“)目录**和cgroup目录树中的**叶子节点**, 不能绑定到中间目录
 * 通过`cgroup.controllers`和`cgroup.subtree_control`指定**哪些controller可以被使用**
 * v1版本中的**task文件**和`cpuset controller`中的`cgroup.clone_children`文件**被移除**
 * 当**cgroup为空**时的**通知机制**得到改进，通过`cgroup.events`文件通知
 
+`Documentation/cgroup-v2.txt`有更详细的描述
+
 # 3. unified hierarchy
 
-在 `Cgroups v1` 允许将不同的 controller 挂载到不同的 hierarchies 虽然很灵活，但实际上这种方式对于使用者来说是没有必要的。因此在 Cgroups v2 版本中，将所有的 controller 都挂载到一个 hierarchy。
+在 `cgroups v1` 允许将不同的 controller 挂载到不同的 hierarchies 虽然很灵活，但实际上这种方式对于使用者来说是没有必要的。因此在 cgroups v2 版本中，将所有的 controller 都挂载到一个 hierarchy。
 
-可以使用下面命令将 Cgroups v2 挂载到文件系统，并且**所有可用的 controller** 会**自动被挂载**进去。
+可以使用下面命令将 cgroups v2 挂载到文件系统，并且**所有可用的 controller** 会**自动被挂载**进去。
 
 ```bash
 mount -t cgroup2 none $MOUNT_POINT
@@ -43,9 +45,9 @@ cgroup.max.depth        cgroup.stat             cpuset.cpus.effective  io.stat
 cgroup.max.descendants  cgroup.subtree_control  cpuset.mems.effective  memory.numa_stat
 ```
 
-**一个 contoller 无法在 Cgroups v1 和 v2 中同时使用**. 如果想在 Cgroups v2 使用已经被 Cgroups v1 使用的 controller，则需要先将其从 Cgroups v1 中 umount 掉。
+**一个 contoller 无法在 cgroups v1 和 v2 中同时使用**. 如果想在 cgroups v2 使用已经被 cgroups v1 使用的 controller，则需要先将其从 cgroups v1 中 umount 掉。
 
-要注意的是，系统启动时，systemd **默认**使用 `Cgroups v1`，并将**可以使用的 controller** mount 到`/sys/fs/cgroup`。如下:
+要注意的是，系统启动时，systemd **默认**使用 `cgroups v1`，并将**可以使用的 controller** mount 到`/sys/fs/cgroup`。如下:
 
 ```bash
 # mount | grep cgroup
@@ -64,30 +66,59 @@ cgroup on /sys/fs/cgroup/memory type cgroup (rw,nosuid,nodev,noexec,relatime,mem
 cgroup on /sys/fs/cgroup/blkio type cgroup (rw,nosuid,nodev,noexec,relatime,blkio)
 ```
 
-如果想在系统启动时，把 `Cgroups v1` **关掉**，可以在 `/etc/default/grub` 文件下修改 kernel 参数,增加 `GRUB_CMDLINE_LINUX_DEFAULT=“cgroup_no_v1=all”`。(all 表示关闭所有的 controller，如果想关闭指定的 controller，则将 all 替换成你需要的 controller 名称，并已逗号分隔即可)。这样就可以在 Cgroups v2 中使用你想要的 controller 了。
+如果想在系统启动时，把 `cgroups v1` **关掉**，可以在 `/etc/default/grub` 文件下修改 kernel 参数,增加 `GRUB_CMDLINE_LINUX_DEFAULT=“cgroup_no_v1=all”`。
 
-# 4. controllers
+```
+cgroup_no_v1=list     # list是用逗号间隔的多个controller
+cgroup_no_v1=all      # all 将所有的controller设置为对cgroup v1不可用
+```
+
+这样就可以在 cgroups v2 中使用你想要的 controller 了。
+
+# 4. 支持的controllers
 
 当前 cgroup v2 支持以下 controller:
 
-* io （since Linux 4.5）
-* memory (since Linux 4.5)
-* pids （since Linux 4.5）
-* perf_event (since Linux 4.11)
-* rdma (since Linux 4.11)
-* cpu (since Linux 4.15)
+* `io`
 
-# 5. subtree control
+>since Linux 4.5, cgroup v1 的 blkio 的继任者
 
-在 **hierarchy** 下的**每一个 Cgroup** 中都会包含如下两个文件:
+* `memory`
+
+> since Linux 4.5, cgroup v1 的 memory 的继任者
+
+* `pids`
+
+>since Linux 4.5, 与 cgroup v1 中的 pids 是同一个
+
+* `perf_event`
+
+>since 4.5，与 cgroup v1 中的 perf_event 是同一个
+
+* `rdma`
+
+>since Linux 4.11, 与 cgroup v1 中的 rdma 是同一个
+
+* `cpu`
+
+>since Linux 4.15, cgroup v1 的 cpu、cpuacct 的继任者
+
+# threaded controller
+
+
+# cgroup目录
+
+## 5. controller的启用/禁止
+
+在 **hierarchy** 下的**每一个 cgroup** 中都会包含如下两个文件:
 
 * `cgroup.controllers`
 
-这是一个`read-only`文件。包含了该Cgroup下**所有可用的controllers**.
+这是一个`read-only`文件。包含了该cgroup下**所有可用的controllers**.
 
 * `cgroup.subtree_control`
 
-这个文件中包含了该Cgroup下**已经被开启的controllers**。 并且`cgroup.subtree_control`中包含的controllers是`cgroup.controllers`文件controller的**子集**。
+这个文件中包含了该cgroup下**已经被开启的controllers**。 并且`cgroup.subtree_control`中包含的controllers是`cgroup.controllers`文件controller的**子集**。
 
 `cgroup.subtree_control` 文件内容格式如下, controller 之间使用空格间隔，前面用”+”表示启用,使用”-“表示停用。比如下面的例子:
 
@@ -95,35 +126,34 @@ cgroup on /sys/fs/cgroup/blkio type cgroup (rw,nosuid,nodev,noexec,relatime,blki
 echo '+pids -memory' > x/y/cgroup.subtree_control
 ```
 
-Cgroups v2 的具体组织结构如下图所示
+cgroups v2 的具体组织结构如下图所示
 
 ![2020-12-16-16-35-53.png](./images/2020-12-16-16-35-53.png)
 
 # 6. “no internal processes” rule
 
-与 Cgroups v1 不同, Cgroups v2 **只能**将**进程**绑定到**叶子节点**。因此不能绑定进程到任何一个**已开启 controller** 的任何 subgroup 中。
+与 cgroups v1 不同, cgroups v2 **只能**将**进程**绑定到**叶子节点**。因此不能绑定进程到任何一个**已开启 controller** 的任何 subgroup 中。
 
 ![2020-12-16-16-54-55.png](./images/2020-12-16-16-54-55.png)
 
 # 7. cgroup.events file
 
-在 Cgroups v2 的实现中，也对 **group empty** 时获取通知的机制进行了优化。
+在 cgroups v2 的实现中，也对 **group empty** 时获取通知的机制进行了优化。
 
-Cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。替代的是使用了 `cgroup.events` 文件。这是一个**只读**的文件，每行一个 key value 对，key 和 value 之间通过空格分割。
+cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。替代的是使用了 `cgroup.events` 文件。这是一个**只读**的文件，每行一个 key value 对，key 和 value 之间通过空格分割。
 
 当前在这个文件中只含有一个 key 就是 populated，对应的 value 是 0。0 表示 cgroup 中没有 process，1 表示 cgroup 中包含 process。
 
 # cgroup.stat file
 
-在 Cgroups v2 hierarchy 下的每个 group 都会包含一个只读文件 cgroup.stat。它的内容也是 key-value 的形式。当前这个文件中包含如下两个 key:
+在 cgroups v2 hierarchy 下的每个 group 都会包含一个只读文件 cgroup.stat。它的内容也是 key-value 的形式。当前这个文件中包含如下两个 key:
 
 * `nr_descendants`, 表示cgroup中存活的subgroup的数量
 * `nr_dying_descendants`, 表示cgroup中已经死亡的cgroup的数量
 
-# 后代 Cgroups 数量限制
+# 后代 cgroups 数量限制
 
-
-在 Cgroups v2 hierarchy 中还包含了两个用于查看和设置该 Cgroups 下的后代 Cgroups 数量的限制文件:
+在 cgroups v2 hierarchy 中还包含了两个用于查看和设置该 cgroups 下的后代 cgroups 数量的限制文件:
 
 * `cgroup.max.depth`(since Linux 4.14)
 
