--- Auto-Git Commit ---

--- a/Linux/Debug/tools/trace/Ftrace/2. trace-cmd.md
+++ b/Linux/Debug/tools/trace/Ftrace/2. trace-cmd.md
@@ -143,6 +143,6 @@ trace-cmd record -e sched_switch -e sched_wakeup -s 1000000
 
 [trace-cmd: A front-end for Ftrace](https://lwn.net/Articles/410200/)
 
-https://lwn.net/Articles/341902/
+trace-cmd - command line reader for ftrace: https://lwn.net/Articles/341902/
 
 https://blog.csdn.net/weixin_44410537/article/details/103587609
