--- a/Linux/Debug/tools/trace/Ftrace/1. ftrace.md
+++ b/Linux/Debug/tools/trace/Ftrace/1. ftrace.md
@@ -29,9 +29,9 @@
   - [14.1. 指定模块](#141-指定模块)
   - [14.2. 跟踪模块初始化](#142-跟踪模块初始化)
 - [15. trace选项(启用或禁用)](#15-trace选项启用或禁用)
-- [16. Max Stack Tracer 的使用](#16-max-stack-tracer-的使用)
+- [16. max stack tracer 的使用](#16-max-stack-tracer-的使用)
 - [17. trace event](#17-trace-event)
-- [18. trace-cmd and KernelShark](#18-trace-cmd-and-kernelshark)
+- [18. trace-cmd and kernelshark](#18-trace-cmd-and-kernelshark)
 - [19. trace marker](#19-trace-marker)
 - [20. 相关代码以及使用](#20-相关代码以及使用)
   - [20.1. trace_printk](#201-trace_printk)
@@ -1111,7 +1111,7 @@ graph-time
 
 比如, `echo notrace_printk > trace_options`。（no和选项之间没有空格。）要再次启用一个跟踪选项，你可以这样：`echo trace_printk > trace_options`。
 
-# 16. Max Stack Tracer 的使用
+# 16. max stack tracer 的使用
 
 这个 tracer 记录内核函数的堆栈使用情况，用户可以使用如下命令打开该 tracer：
 
@@ -1196,7 +1196,11 @@ echo 1 > events/kvm/kvm_cpuid/enable
 
 注: 只要设置set_event或者开启相应enable, 然后打开tracing_on即可, 不用额外配置
 
-# 18. trace-cmd and KernelShark
+# 18. trace-cmd and kernelshark
+
+`trace-cmd` 和 开源的 `kernelshark`(GUI工具) 均是内核`Ftrace` 的前段工具, 用于分分析核性能.
+
+他们相当于是一个 `/sys/kernel/debug/tracing` 中文件系统接口的封装, 为用户提供了更加直接和方便的操作.
 
 trace-cmd是由Steven Rostedt在2009年发在LKML上的，它可以让操作跟踪器更简单。以下几步是获取最新的版本并装在你的系统上，包括它的GUI工具KernelShark。
 
@@ -1221,10 +1225,12 @@ make install_gui # installs GUI tools
 ```
 trace-cmd list ##to see available events 
 
+// 收集
 trace-cmd record -e syscalls ls ##Initiate tracing on the syscall 'ls' 
 
 ##(A file called trace.dat gets created in the current directory.) 
 
+// 解析结果
 trace-cmd report ## displays the report from trace.dat
 ```
 
