--- Auto-Git Commit ---

--- a/Linux/Debug/filesystem/1. 数据交换的文件系统.md
+++ b/Linux/Debug/filesystem/1. 数据交换的文件系统.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 伪文件系统](#1-伪文件系统)
+- [1. 几种文件系统](#1-几种文件系统)
 - [2. procfs文件系统](#2-procfs文件系统)
 - [3. sysfs文件系统](#3-sysfs文件系统)
 - [4. debugfs文件系统](#4-debugfs文件系统)
@@ -12,9 +12,9 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 伪文件系统
+# 1. 几种文件系统
 
-用户空间与内核空间数据交换的文件系统
+**用户空间**与**内核空间**数据交换的文件系统
 
 | 文件系统 | 描述 |
 |:--------:|:-------|
