--- a/Hided/Git/3. 撤销恢复.md
+++ b/Hided/Git/3. 撤销恢复.md
@@ -6,7 +6,7 @@
 - [1. 基本概念](#1-基本概念)
   - [1.1. 3个步骤](#11-3个步骤)
   - [1.2. 4个区](#12-4个区)
-- [2. 检查修改](#2-检查修改)
+- [2. 检查修改内容](#2-检查修改内容)
   - [2.1. 已修改，未暂存](#21-已修改未暂存)
   - [2.2. 已暂存，未提交](#22-已暂存未提交)
   - [2.3. 已提交，未推送](#23-已提交未推送)
@@ -15,8 +15,10 @@
   - [3.2. 已暂存，未提交](#32-已暂存未提交)
   - [3.3. 已提交，未推送](#33-已提交未推送)
   - [3.4. 已推送](#34-已推送)
-- [4. 总结](#4-总结)
-- [5. 参考](#5-参考)
+- [4. 没有traced文件](#4-没有traced文件)
+  - [4.1. 用法](#41-用法)
+- [5. 总结](#5-总结)
+- [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
 
@@ -34,9 +36,9 @@ git commit -m "comment"
 git push
 ```
 
-- git add .把所有文件放入暂存区；
-- git commit把所有文件从暂存区提交进本地仓库；
-- git push把所有文件从本地仓库推送进远程仓库。
+- `git add .`把所有文件放入暂存区；
+- `git commit`把所有文件从暂存区提交进本地仓库；
+- `git push`把所有文件从本地仓库推送进远程仓库。
 
 ## 1.2. 4个区
 
@@ -45,7 +47,7 @@ git push
 - 本地仓库(Local Repository)
 - 远程仓库(Remote Repository)
 
-# 2. 检查修改
+# 2. 检查修改内容
 
 ## 2.1. 已修改，未暂存
 
@@ -67,7 +69,7 @@ git diff这个命令只检查我们的工作区和暂存区之间的差异，如
 git diff master origin/master [filename]
 ```
 
-在这里，master就是你的本地仓库，而origin/master就是你的远程仓库，master是主分支的意思，因为我们都在主分支上工作，所以这里两边都是master，而origin是远程。
+在这里，master就是你的本地仓库，而`origin/master`就是你的远程仓库，master是主分支的意思，因为我们都在主分支上工作，所以这里两边都是master，而origin是远程。
 
 # 3. 撤销修改
 
@@ -115,11 +117,48 @@ git reset --hard HEAD^
 git push -f
 ```
 
-# 4. 总结
+# 4. 没有traced文件
 
-以上4种状态的撤销我们都用到了同一个命令git reset --hard，前2种状态的用法甚至完全一样，所以只要掌握了git reset --hard这个命令的用法，从此你再也不用担心提交错误了。
+`git clean`经常和`git reset --hard`一起结合使用. 记住**reset只影响被track过的文件**, 所以需要clean来删除没有track过的文件. 结合使用这两个命令能让你的工作目录完全回到一个指定的`<commit>`的状态
 
-# 5. 参考
+## 4.1. 用法
+
+`git clean -n`
+
+是一次clean的演习, 告诉你哪些文件会被删除. 记住他不会真正的删除文件, 只是一个提醒
+
+`git clean -f`
+
+删除当前目录下**所有没有track过的文件**. **不会**删除`.gitignore`文件里面指定的文件夹和文件, 不管这些文件有没有被track过
+
+`git clean -f <path>`
+
+删除指定路径下的没有被track过的文件
+
+`git clean -df`
+
+删除当前目录下没有被track过的**文件和文件夹**
+
+`git clean -xf`
+
+删除当前目录下所有没有track过的文件. 不管他是否是.gitignore文件里面指定的文件夹和文件
+
+`git clean`对于刚编译过的项目也非常有用. 如, 他能轻易删除掉编译后生成的.o和.exe等文件. 这个在打包要发布一个release的时候非常有用
+
+# 5. 总结
+
+以上4种状态的撤销我们都用到了同一个`命令git reset --hard`，前2种状态的用法甚至完全一样，所以只要掌握了`git reset --hard`这个命令的用法，从此你再也不用担心提交错误了。
+
+要删除所有工作目录下面的修改, 包括新添加的文件, 结合使用
+
+```
+git reset --hard
+git clean -df
+```
+
+这两个结合使用, 能让你的工作目录完全回退到最近一次commit的时候
+
+# 6. 参考
 
 来源：张京  
 
