--- a/Linux/Debug/kprobe/2. 开发实践.md
+++ b/Linux/Debug/kprobe/2. 开发实践.md
@@ -1,45 +1,16 @@
 
 
-# 简介
+# 1. 使用示例
 
-## 如何高效地调试内核
+本文附带的包包含了三个示例模块，
+* `kprobe-exam.c`是**kprobes**使用示例，
+* `jprobe-exam.c`是jprobes使用示例，
+* `kretprobe-exam.c`是kretprobes使用示例
 
-如何高效地调试内核?
+可以下载并执行如下指令来实验这些模块:
 
-1. `printk` 是一种方法, 但是 `printk` 终归是毫无选择地全量输出, 某些场景下不实用, 于是你可以试一下`tracepoint`, **只有使能** `tracepoint` 机制的时候才输出. 
-2. 对于傻傻地放置 `printk` 来输出信息的方式, `tracepoint` 是个进步, `tracepoint` 只是内核在**某些特定行为**(比如进程切换)上部署的一些**静态锚点**, 有些锚点**并不一定是你需要的**, 但是你仍然需要自己部署`tracepoint`, **重新编译内核**. 
-3. 那么 `kprobe` 的出现就很有必要了, 它可以在运行的内核中**动态插入探测点**, 执行你**预定义的操作**.
-
-## kprobe介绍
-
-`kprobe` 是 `linux` 内核的一个重要特性, 是一个轻量级的内核调试工具, 同时它又是其他一些更高级的内核调试工具(比如 `perf` 和 `systemtap`)的 "基础设施", 4.0版本的内核中, 强大的 `eBPF` 特性也寄生于 `kprobe` 之上, 所以 `kprobe` 在内核中的地位就可见一斑了.
-
-`Kprobes` 提供了一种方法，能够在**不修改现有代码**的基础上，灵活的跟踪内核函数的执行。它提供了一个**强行进入任何内核例程**并从中断处理器无干扰地收集信息的接口. 使用 `Kprobes` 可以收集**处理器寄存器**和**全局数据结构**等调试信息。开发者甚至可以使用 `Kprobes` 来**修改**寄存器值和全局数据结构的值.
-
-它的基本工作机制是: 用户**指定一个探测点**, 并把一个用户定义的**处理函数关联**到该探测点, 当内核执行到该探测点时, 相应的关联函数被执行，然后**继续执行正常的代码路径**.
-
-`kprobe` 实现了三种类型的探测点 : `kprobes`, `jprobes`和 `kretprobes`(也叫返回探测点). 
-* `kprobes` 是可以被插入到内核的**任何指令位置**的探测点, 
-* `jprobes` 则只能被插入到一个**内核函数的入口**, 
-* 而 `kretprobes` 则是在指定的内核**函数返回时**才被执行.
-
-
-[Linux内核kprobe机制](http://abcdxyzk.github.io/blog/2013/05/24/debug-kprobe-base/)
-
-[kprobe工作原理](https://blog.csdn.net/liwg06/article/details/55733132)
-
-[随想录(强大的kprobe)](http://blog.csdn.net/feixiaoxing/article/details/40351811)
-
-[kprobe原理解析（一）](http://www.cnblogs.com/honpey/p/4575928.html)
-
-
-
-https://www.ibm.com/developerworks/cn/linux/l-cn-systemtap1/
-
-
-kprobe使用实例
-本文附带的包包含了三个示例模块，kprobe-exam.c是kprobes使用示例，jprobe-exam.c是jprobes使用示例，kretprobe-exam.c是kretprobes使用示例，读者可以下载该包并执行如下指令来实验这些模块：
-$ tar -jxvf kprobes-examples.tar.bz2
+```
+tar -jxvf kprobes-examples.tar.bz2
 $ cd kprobes-examples
 $ make
 …
@@ -68,6 +39,8 @@ $ rmmod kretprobe-example
 $ dmesg
 …
 $
+```
+
 示例模块kprobe-exame.c探测schedule()函数，在探测点执行前后分别输出当前正在运行的进程、所在的CPU以及preempt_count()，当卸载该模块时将输出该模块运行时间以及发生的调度次数。这是该模块在作者系统上的输出：
 kprobe registered
 current task on CPU#1: swapper (before scheduling), preempt_count = 0
@@ -121,3 +94,7 @@ Missed 11 sys_open probe instances.
 回页首
 小结
 本文详细地讲解了kprobe的方方面面并给出实际的例子代码帮助读者学习和使用kprobe。本文是系列文章“Linux下的一个全新的性能测量和调式诊断工具 -- Systemtap”之一，有兴趣的读者可以阅读该系列文章之二和三。
+
+
+
+
