--- a/Linux/Debug/tools/trace/Ftrace/1. ftrace介绍与使用.md
+++ b/Linux/Debug/tools/trace/Ftrace/1. ftrace介绍与使用.md
@@ -31,12 +31,11 @@
 - [15. trace选项(启用或禁用)](#15-trace选项启用或禁用)
 - [16. max stack tracer 的使用](#16-max-stack-tracer-的使用)
 - [17. trace event](#17-trace-event)
-- [18. trace-cmd and kernelshark](#18-trace-cmd-and-kernelshark)
-- [19. trace marker](#19-trace-marker)
-- [20. 相关代码以及使用](#20-相关代码以及使用)
-  - [20.1. trace_printk](#201-trace_printk)
-  - [20.2. 使用 tracing_on/tracing_off 控制跟踪信息的记录](#202-使用-tracing_ontracing_off-控制跟踪信息的记录)
-- [21. 参考](#21-参考)
+- [18. trace marker](#18-trace-marker)
+- [19. 工具函数使用](#19-工具函数使用)
+  - [19.1. trace_printk](#191-trace_printk)
+  - [19.2. 使用 tracing_on/tracing_off 控制跟踪信息的记录](#192-使用-tracing_ontracing_off-控制跟踪信息的记录)
+- [20. 参考](#20-参考)
 
 <!-- /code_chunk_output -->
 
@@ -46,11 +45,12 @@
 
 ftrace 是 `Linux`当前版本中, 功能最强大的调试、跟踪手段. 其最基本的功能是提供了**动态**和**静态探测点**, 用于探测内核中**指定位置**上的相关信息.
 
-* 静态探测点, 是在内核代码中调用 `ftrace` 提供的相应接口实现, 称之为静态是因为, 是在**内核代码中写死**的, 静态编译到内核代码中的, 在内核编译后, 就不能再动态修改. 在开启 `ftrace` 相关的内核配置选项后, 内核中已经在一些关键的地方设置了静态探测点, 需要使用时, 即可查看到相应的信息.
+* **静态探测点**, 是在内核代码中调用 `ftrace` 提供的相应接口实现, 称之为静态是因为, 是在**内核代码中写死**的, 静态编译到内核代码中的, 在内核编译后, 就不能再动态修改. 在开启 `ftrace` 相关的内核配置选项后, 内核中已经在一些关键的地方设置了静态探测点, 需要使用时, 即可查看到相应的信息.
+* **动态探测点**, 基本原理为: 利用 `mcount` 机制, 在**内核编译**时, 在**每个函数入口保留数个字节**, 然后在使用 `ftrace`时, 将保留的字节替换为需要的指令, 比如跳转到需要的执行探测操作的代码。
 
-* 动态探测点, 基本原理为: 利用 `mcount` 机制, 在**内核编译**时, 在**每个函数入口保留数个字节**, 然后在使用 `ftrace`时, 将保留的字节替换为需要的指令, 比如跳转到需要的执行探测操作的代码。
-
-所以ftrace里的**跟踪机制**总结起来主要有**两种**，分别是**函数**和**tracepoint**。前者属于“傻瓜式”操作，GCC编译会自动在内核函数加入一段代码; 后者tracepoint可以理解为一个Linux内核中的**占位符函数**，包括`trace_printk`和`trace event`, 开发者可以自己定义并多加一些变量等信息。
+所以ftrace里的**跟踪机制**总结起来主要有**两种**，分别是**函数**和**tracepoint**。
+* `函数`属于“傻瓜式”操作，GCC编译会自动在内核函数加入一段代码; 
+* `tracepoint`可以理解为一个Linux内核中的**占位符函数**，包括`trace_printk`和`trace event`, 开发者可以自己定义并多加一些变量等信息。
 
 最早 `ftrace` 是一个 `function tracer`, **仅**能够记录内核的**函数调用流程**. 如今 `ftrace` 已经成为一个 `framework`, 采用 `plugin` 的方式支持开发人员添加更多种类的 `trace` 功能.
 
@@ -1196,59 +1196,15 @@ echo 1 > events/kvm/kvm_cpuid/enable
 
 注: 只要设置set_event或者开启相应enable, 然后打开tracing_on即可, 不用额外配置
 
-# 18. trace-cmd and kernelshark
+# 18. trace marker
 
-`trace-cmd` 和 开源的 `kernelshark`(GUI工具) 均是内核`Ftrace` 的前段工具, 用于分分析核性能.
+有时需要跟踪用户程序和内核空间的运行情况，trace marker可以很方便地跟踪用户程序。`trace_marker`是一个文件节点，允许用户程序写入字符串，ftrace会记录该写入动作时的时间戳。
 
-他们相当于是一个 `/sys/kernel/debug/tracing` 中文件系统接口的封装, 为用户提供了更加直接和方便的操作.
-
-trace-cmd是由Steven Rostedt在2009年发在LKML上的，它可以让操作跟踪器更简单。以下几步是获取最新的版本并装在你的系统上，包括它的GUI工具KernelShark。
-
-```
-wget http://ftp.be.debian.org/pub/linux/analysis/trace-cmd/trace-cmd-1.0.5.tar.gz
-
-tar -zxvf trace-cmd-1.0.5.tar.gz
-
-cd trace-cmd*
-
-make
-
-make gui # compiles GUI tools (KernelShark)[3]
-
-make install
-
-make install_gui # installs GUI tools
-```
-
-有了trace-cmd，跟踪将变得小菜一碟（见图6的示例用法）：
-
-```
-trace-cmd list ##to see available events 
-
-// 收集
-trace-cmd record -e syscalls ls ##Initiate tracing on the syscall 'ls' 
-
-##(A file called trace.dat gets created in the current directory.) 
-
-// 解析结果
-trace-cmd report ## displays the report from trace.dat
-```
-
-![2020-01-31-20-19-28.png](./images/2020-01-31-20-19-28.png)
-
-通过上面的make install_gui命令安装的KernelShark可以用于分析trace.dat文件中的跟踪数据，如图7所示。
-
-![2020-01-31-20-19-47.png](./images/2020-01-31-20-19-47.png)
-
-# 19. trace marker
-
-有时需要跟踪用户程序和内核空间的运行情况，trace marker可以很方便地跟踪用户程序。trace_marker是一个文件节点，允许用户程序写入字符串，ftrace会记录该写入动作时的时间戳。
-
-# 20. 相关代码以及使用
+# 19. 工具函数使用
 
 内核头文件 `include/linux/kernel.h` 中描述了 `ftrace` 提供的工具函数的原型，这些函数包括 `trace_printk`、`tracing_on/tracing_off` 等。本文通过示例模块程序向读者展示如何在代码中使用这些工具函数。
 
-## 20.1. trace_printk
+## 19.1. trace_printk
 
 ftrace 提供了一个用于向 ftrace 跟踪缓冲区输出跟踪信息的工具函数，叫做 `trace_printk()`，它的使用方式与 printk() 类似。
 
@@ -1378,7 +1334,7 @@ trace_printk("elapsed %lld ns\n", elapsed_ns);
  }
 ```
 
-## 20.2. 使用 tracing_on/tracing_off 控制跟踪信息的记录
+## 19.2. 使用 tracing_on/tracing_off 控制跟踪信息的记录
 
 在跟踪过程中，有时候在检测到某些事件发生时，想要停止跟踪信息的记录，这样，跟踪缓冲区中较新的数据是与该事件有关的。在用户态，可以通过向文件 `tracing_on` 写入 0 来停止记录跟踪信息，写入 1 会继续记录跟踪信息。而在内核代码中，可以通过函数 `tracing_on()` 和 `tracing_off()` 来做到这一点，它们的行为类似于对 `/sys/kernel/debug/tracing` 下的文件 tracing_on 分别执行写 1 和 写 0 的操作。使用这两个函数，会对跟踪信息的记录控制地更准确一些，这是因为在用户态写文件 tracing_on 到实际暂停跟踪，中间由于上下文切换、系统调度控制等可能已经经过较长的时间，这样会积累大量的跟踪信息，而感兴趣的那部分可能会被覆盖掉了。
 
@@ -1462,7 +1418,7 @@ if (condition)
 
 用户态的应用程序可以通过直接读写文件 tracing_on 来控制记录跟踪信息的暂停状态，以便了解应用程序运行期间内核中发生的活动。
 
-# 21. 参考
+# 20. 参考
 
 本文来自 
 
