--- a/Linux/Debug/tools/systemtap/1. 介绍.md
+++ b/Linux/Debug/tools/systemtap/1. 介绍.md
@@ -1,7 +1,14 @@
 
 
 
-`SystemTap` 是监控和跟踪运行中的 `Linux` 内核的操作的动态方法. 这句话的关键词是**动态**, 因为 `SystemTap` 没有使用工具构建一个特殊的内核, 而是允许您在运行时**动态地安装该工具**. 它通过 `Kprobes` 的应用编程接口 (`API`) 来实现该目的.
+
+SystemTap是一个诊断Linux系统**性能**或**功能**问题的开源软件。它使得对运行时的Linux系统进行诊断调试变得更容易、更简单。有了它，开发者或调试人员**不再**需要**重编译**、**安装新内核**、重启动等烦人的步骤。
+
+为了诊断系统问题或性能，开发者或调试人员只需要写一些脚本，然后通过SystemTap提供的命令行接口就可以对正在运行的内核进行诊断调试，以前需要的修改或插入调试代码、重新编译内核、安装内核和重启动等这些琐碎的工作完全消除。目前该工具并不支持对用户态应用的诊断调试，但是它们在以后会被添加进去。当前该项目的主要开发人员为来自Red Hat, IBM, Intel和Hitachi的工程师。其中Redhat主要负责脚本转换/翻译器和运行时库，IBM负责kprobe和relayfs，Intel负责转换器安全检查以及performance monitor tapset。
+
+`SystemTap` 是监控和跟踪运行中的 `Linux` 内核的操作的**动态方法**. 这句话的关键词是**动态**, 因为 `SystemTap` 没有使用工具构建一个特殊的内核, 而是允许您在运行时**动态地安装该工具**. 它通过 `Kprobes` 的应用编程接口 (`API`) 来实现该目的.
+
+
 
 ## Solaris中的DTrace
 
@@ -40,11 +47,16 @@
 
 https://www.ibm.com/developerworks/cn/linux/l-systemtap/
 
+官方首页: https://sourceware.org/systemtap/
+
+官方wiki: https://sourceware.org/systemtap/wiki
+
+官方文档: https://sourceware.org/systemtap/documentation.html
+
 [SystemTap知识（一）](http://www.cnblogs.com/yjf512/p/3286429.html)
 
 [内核探测工具systemtap简介](http://www.cnblogs.com/hazir/p/systemtap_introduction.html)
 
-[内核探测工具systemtap简介](http://www.cnblogs.com/hazir/p/systemtap_introduction.html)
 
 [华的专栏--Systemtap](http://blog.csdn.net/wh8_2011/article/category/6233902)
 
@@ -93,3 +105,23 @@ http://redmonk.com/sogrady/2008/07/01/dtrace-vs-systemtap-redux/
 http://www.cnblogs.com/hazir/p/systemtap_introduction.html
 
 https://www.ibm.com/developerworks/cn/linux/l-cn-systemtap3/
+
+
+
+[SystemTap 学习笔记 - 安装篇](https://segmentfault.com/a/1190000000671438)
+
+[Linux 自检和 SystemTap 用于动态内核分析的接口和语言](https://www.ibm.com/developerworks/cn/linux/l-systemtap/)
+
+[Brendan's blog Using SystemTap](http://dtrace.org/blogs/brendan/2011/10/15/using-systemtap/)
+
+[内核调试神器SystemTap — 简介与使用（一）](http://blog.csdn.net/zhangskd/article/details/25708441)
+
+[内核探测工具systemtap简介](http://www.cnblogs.com/hazir/p/systemtap_introduction.html)
+
+[SystemTap Beginner](http://blog.csdn.net/kafeiflynn/article/details/6429976)
+
+[使用systemtap调试linux内核](http://blog.csdn.net/heli007/article/details/7187748)
+
+[Ubuntu Kernel Debuginfo](http://ddebs.ubuntu.com/pool/main/l/linux)
+
+[Linux 下的一个全新的性能测量和调式诊断工具 Systemtap, 第 3 部分: Systemtap](https://www.ibm.com/developerworks/cn/linux/l-cn-systemtap3/)
