--- a/Linux/Debug/tools/systemtap/1. 介绍.md
+++ b/Linux/Debug/tools/systemtap/1. 介绍.md
@@ -4,7 +4,7 @@
 
 SystemTap是一个诊断Linux系统**性能**或**功能**问题的开源软件。它使得对运行时的Linux系统进行诊断调试变得更容易、更简单。有了它，开发者或调试人员**不再**需要**重编译**、**安装新内核**、**重启动**等烦人的步骤。
 
-为了诊断系统问题或性能，开发者或调试人员**只需要写一些脚本**，然后通过SystemTap提供的**命令行接口**就可以对**正在运行的内核**进行诊断调试，以前需要的修改或插入调试代码、重新编译内核、安装内核和重启动等这些琐碎的工作完全消除。目前该工具并不支持对用户态应用的诊断调试，但是它们在以后会被添加进去。当前该项目的主要开发人员为来自Red Hat, IBM, Intel和Hitachi的工程师。其中Redhat主要负责脚本转换/翻译器和运行时库，IBM负责kprobe和relayfs，Intel负责转换器安全检查以及performance monitor tapset。
+开发者或调试人员**只需要写一些脚本**，然后通过SystemTap提供的**命令行接口**就可以对**正在运行的内核**进行诊断调试，以前需要的修改或插入调试代码、重新编译内核、安装内核和重启动等这些琐碎的工作完全消除。目前该工具并不支持对用户态应用的诊断调试，但是它们在以后会被添加进去。当前该项目的主要开发人员为来自Red Hat, IBM, Intel和Hitachi的工程师。其中Redhat主要负责脚本转换/翻译器和运行时库，IBM负责kprobe和relayfs，Intel负责转换器安全检查以及performance monitor tapset。
 
 `SystemTap` 是监控和跟踪运行中的 `Linux` 内核的操作的**动态方法**. 这句话的关键词是**动态**, 因为 `SystemTap` 没有使用工具构建一个特殊的内核, 而是允许您在运行时**动态地安装该工具**. 它通过 `Kprobes` 的应用编程接口 (`API`) 来实现该目的.
 
