--- Auto-Git Commit ---

--- a/Linux/Debug/tools/systemtap/1. 介绍.md
+++ b/Linux/Debug/tools/systemtap/1. 介绍.md
@@ -4,7 +4,11 @@
 
 SystemTap是一个诊断Linux系统**性能**或**功能**问题的开源软件。它使得对运行时的Linux系统进行诊断调试变得更容易、更简单。有了它，开发者或调试人员**不再**需要**重编译**、**安装新内核**、**重启动**等烦人的步骤。
 
-开发者或调试人员**只需要写一些脚本**，然后通过SystemTap提供的**命令行接口**就可以对**正在运行的内核**进行诊断调试，以前需要的修改或插入调试代码、重新编译内核、安装内核和重启动等这些琐碎的工作完全消除。目前该工具并不支持对用户态应用的诊断调试，但是它们在以后会被添加进去。当前该项目的主要开发人员为来自Red Hat, IBM, Intel和Hitachi的工程师。其中Redhat主要负责脚本转换/翻译器和运行时库，IBM负责kprobe和relayfs，Intel负责转换器安全检查以及performance monitor tapset。
+开发者或调试人员**只需要写一些脚本**，然后通过SystemTap提供的**命令行接口**就可以对**正在运行的内核**进行诊断调试.
+
+
+
+
 
 `SystemTap` 是监控和跟踪运行中的 `Linux` 内核的操作的**动态方法**. 这句话的关键词是**动态**, 因为 `SystemTap` 没有使用工具构建一个特殊的内核, 而是允许您在运行时**动态地安装该工具**. 它通过 `Kprobes` 的应用编程接口 (`API`) 来实现该目的.
 
@@ -49,9 +53,6 @@ https://www.ibm.com/developerworks/cn/linux/l-systemtap/
 
 官方首页: https://sourceware.org/systemtap/
 
-官方wiki: https://sourceware.org/systemtap/wiki
-
-官方文档: https://sourceware.org/systemtap/documentation.html
 
 [SystemTap知识（一）](http://www.cnblogs.com/yjf512/p/3286429.html)
 
@@ -62,9 +63,9 @@ https://www.ibm.com/developerworks/cn/linux/l-systemtap/
 
 [Systemtap语言详解](http://blog.csdn.net/linyt/article/category/645022)
 
-[Systemtap-Wiki](https://sourceware.org/systemtap/wiki)
+[Systemtap官方-Wiki](https://sourceware.org/systemtap/wiki)
 
-[Systemtap-Documentation](https://sourceware.org/systemtap/documentation.html)
+[Systemtap官方-Documentation](https://sourceware.org/systemtap/documentation.html)
 
 [Language Reference](https://sourceware.org/systemtap/langref/)
 
@@ -76,6 +77,7 @@ https://www.ibm.com/developerworks/cn/linux/l-systemtap/
 http://www.aikaiyuan.com/8862.html
 
 [centos7 systemtap 介绍](http://www.fx114.net/qa-131-159851.aspx)
+
 http://blog.csdn.net/trochiluses/article/details/9698449
 
 [如何在ubuntu上基于自定义内核安装systemtap](http://blog.csdn.net/trochiluses/article/details/9698449)
