--- Auto-Git Commit ---

--- a/Linux/Debug/kprobe/1. 基本介绍.md
+++ b/Linux/Debug/kprobe/1. 基本介绍.md
@@ -21,6 +21,10 @@
 
 # 2. kprobe 是什么
 
+`kprobe` 提供了一种方法，能够在**不修改现有代码**的基础上，灵活的跟踪内核函数的执行。它提供了一个**强行进入任何内核例程**并从中断处理器无干扰地收集信息的接口. 使用 `Kprobe` 可以收集**处理器寄存器**和**全局数据结构**等调试信息。开发者甚至可以使用 `Kprobe` 来**修改**寄存器值和全局数据结构的值.
+
+有了它，开发者或调试人员**不再**需要**重编译**、**安装新内核**、**重启动**等烦人的步骤。
+
 kprobes出现了非常长的时间,最早是2.6.9版本中，最早能够追溯到2004年，距离现在15年，一直没有为人所知，但却是隐藏在诸多技术后的一个**基础组件**，例如`ftrace`、`perf`、`SystemTap`、`LTTng`, 还有最近非常火热的`ebpf`.
 
 kprobe即`kernel probe`, 是一种debug机制，它是由**IBM**开发的, 最初计划用来和另外一个工具`DProbes`配套使用的，但是只有kprobe被合并到mainline了而Dprobe没有被接受，不过也成就了它现在的**trace基础地位**。
@@ -31,11 +35,9 @@ kprobe通常被用来**查找性能瓶颈**，**记录指定的事件**，用来
 
 一般，**使用kprobe**的**程序**实现作**一个内核模块**，模块的**初始化**函数来负责**安装探测点**，**退出**函数**卸载**那些被安装的**探测点**。kprobe提供了接口函数（APIs）来安装或卸载探测点。目前kprobe已经支持了多种CPU架构。
 
-**裸的kprobe**使用起来有些复杂, 它需要**单独编写内核模块**, 所以为了降低使用复杂度, kprobe不停的寻找和其他能够**配合的框架**, 目前它主要作为ftrace,ebpf,SystemTap等框架和工具的**后端存在**，主要用来做**日志**了，看起来它也混的挺憋屈的，有强大的功能就是没人用。
+**裸的kprobe**使用起来有些复杂, 它需要**单独编写内核模块**, 所以为了降低使用复杂度, kprobe不停的寻找和其他能够**配合的框架**, 目前它主要作为`ftrace`、`perf`、`LTTng`、`ebpf`, `SystemTap`等框架和工具的**后端存在**，主要用来做**日志**了，看起来它也混的挺憋屈的，有强大的功能就是没人用。
 
 # 4. kprobe 的机制和组成
-
-`kprobe` 提供了一种方法，能够在**不修改现有代码**的基础上，灵活的跟踪内核函数的执行。它提供了一个**强行进入任何内核例程**并从中断处理器无干扰地收集信息的接口. 使用 `Kprobe` 可以收集**处理器寄存器**和**全局数据结构**等调试信息。开发者甚至可以使用 `Kprobe` 来**修改**寄存器值和全局数据结构的值.
 
 它的基本工作机制是: 用户**指定一个探测点**, 并把一个用户定义的**处理函数关联**到该**探测点**, 当内核执行到该探测点时, 相应的关联函数被执行，然后**继续执行正常的代码路径**.
 
