--- Auto-Git Commit ---

--- a/Linux/Debug/systemtap/1. 介绍与使用.md
+++ b/Linux/Debug/systemtap/1. 介绍与使用.md
@@ -2,11 +2,11 @@
 
 # systemtap 简介
 
-systemtap 利用Kprobe 提供的API来实现**动态**地**监控和跟踪运行中！！！的Linux内核**的工具.
+易用性: systemtap 利用Kprobe 提供的API来实现**动态**地**监控和跟踪运行中！！！的Linux内核**的工具. 开发者或调试人员**不再**需要**重编译**、**安装新内核**、**重启动**等烦人的步骤。
 
-有了它，开发者或调试人员**不再**需要**重编译**、**安装新内核**、**重启动**等烦人的步骤。
+灵活性: 相比 kprobe，开发者或调试人员**只需要写一些脚本**，然后通过SystemTap提供的**命令行接口**就可以对**正在运行的内核**进行诊断调试.
 
-相比 kprobe，开发者或调试人员**只需要写一些脚本**，然后通过SystemTap提供的**命令行接口**就可以对**正在运行的内核**进行诊断调试.
+因此，SystemTap与其说是工具，还不如说是一个允许你开发自己的特定于内核的收集和监视工具的系统.
 
 ## Solaris中的DTrace
 
@@ -32,6 +32,14 @@ systemtap 利用Kprobe 提供的API来实现**动态**地**监控和跟踪运行
 
 
 
+
+
+
+
+
+
+
+
 ![2020-12-21-21-32-30.png](./images/2020-12-21-21-32-30.png)
 
 
@@ -49,6 +57,14 @@ https://www.ibm.com/developerworks/cn/linux/l-systemtap/
 
 官方首页: https://sourceware.org/systemtap/
 
+[Systemtap官方-Wiki](https://sourceware.org/systemtap/wiki)
+
+[Systemtap官方-Documentation](https://sourceware.org/systemtap/documentation.html)
+
+[Systemtap官方使用手册](https://sourceware.org/systemtap/SystemTap_Beginners_Guide/)
+
+[官方Language Reference](https://sourceware.org/systemtap/langref/)
+
 
 [SystemTap知识（一）](http://www.cnblogs.com/yjf512/p/3286429.html)
 
@@ -58,12 +74,6 @@ https://www.ibm.com/developerworks/cn/linux/l-systemtap/
 [华的专栏--Systemtap](http://blog.csdn.net/wh8_2011/article/category/6233902)
 
 [Systemtap语言详解](http://blog.csdn.net/linyt/article/category/645022)
-
-[Systemtap官方-Wiki](https://sourceware.org/systemtap/wiki)
-
-[Systemtap官方-Documentation](https://sourceware.org/systemtap/documentation.html)
-
-[Language Reference](https://sourceware.org/systemtap/langref/)
 
 [IBM RedBook Systemtap](http://www.redbooks.ibm.com/abstracts/redp4469.html)
 
